
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int target ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_zero; TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;


 int AF_INET ;
 int GAZTEK_PORT ;
 int SOCK_STREAM ;
 int bzero (int *,int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 char* malloc (int) ;
 int printf (char*,...) ;
 int read (int,char*,int) ;
 int socket (int ,int ,int ) ;
 int strcpy (char*,char*) ;
 char* strstr (char*,char*) ;
 char* strtok (char*,char*) ;
 int write (int,char*,int) ;

void get_ban(char *ban_addr)
{
   int i, sock_fd;
   char *read_buf, *read_buf_toked, *ptr;
   struct sockaddr_in target;

   if((sock_fd = socket(AF_INET, SOCK_STREAM, 0)) < 1)
   {
      printf("socket() error.\n");
      exit(-1);
   }

   target.sin_family = AF_INET;
   target.sin_port = htons(GAZTEK_PORT);

   if((target.sin_addr.s_addr = inet_addr(ban_addr)) == -1)
   {
      printf("\"%s\" is an invalid ip address.\n", ban_addr);
      exit(-1);
   }

   bzero(&(target.sin_zero), 8);

   if((connect(sock_fd, (struct sockaddr *)&target, sizeof(target))) == -1)
   {
      printf("connect() error.\n");
      exit(-1);
   }

   if((write(sock_fd, "HEAD HTTP /\n\n", 13)) == -1)
   {
      printf("write() error.\n");
      exit(-1);
   }

   read_buf = malloc(256);
   read_buf_toked = malloc(256);

   if((read(sock_fd, read_buf, 256)) == -1)
   {
      printf("read() error.\n");
      exit(-1);
   }

   strcpy(read_buf_toked, read_buf);
   ptr = strstr(read_buf_toked, "Server");
   ptr = strtok(ptr, "\n");

   printf("%s\n\n", ptr);

   printf("****** FULL HEADERS ******\n");
   ptr = strtok(read_buf, "\n");

   for(i=0; i<4; i++)
   {
      ptr = strtok(((void*)0), "\n");
      printf("%s\n", ptr);
   }
   printf("****** FULL HEADERS ******\n");
   exit(0);
}
